[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/PlayerHUD.gd" type="Script" id=1]
[ext_resource path="res://Resources/fonts/poco/Poco.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/textures/objects/settings_icon.png" type="Texture" id=3]
[ext_resource path="res://Resources/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=6]
size = 19
extra_spacing_bottom = 7
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 31
extra_spacing_bottom = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 2
outline_color = Color( 0.0745098, 0.235294, 0.870588, 1 )
extra_spacing_bottom = 24
extra_spacing_char = 7
extra_spacing_space = 6
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputRemapper" type="Control" parent="Control"]
visible = false
anchor_left = 0.25
anchor_top = 0.213
anchor_right = 0.75
anchor_bottom = 0.747
margin_left = 190.0
margin_top = 209.792
margin_right = 190.0
margin_bottom = 209.392
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenMenuButton" type="Button" parent="Control/InputRemapper"]
anchor_top = 0.025
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 592.0
margin_top = -72.0
margin_right = 248.0
margin_bottom = -348.0
custom_fonts/font = SubResource( 6 )
text = "Change Keybinds..."
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyMapMenu" type="GridContainer" parent="Control/InputRemapper"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchKeyBind" type="Button" parent="Control/InputRemapper/KeyMapMenu"]
margin_right = 12.0
margin_bottom = 20.0

[node name="SwitchLabel" type="Label" parent="Control/InputRemapper/KeyMapMenu"]
margin_top = 24.0
margin_right = 12.0
margin_bottom = 38.0

[node name="AdvanceKeyBind" type="Button" parent="Control/InputRemapper/KeyMapMenu"]
margin_top = 42.0
margin_right = 12.0
margin_bottom = 62.0

[node name="AdvanceLabel" type="Label" parent="Control/InputRemapper/KeyMapMenu"]
margin_top = 66.0
margin_right = 12.0
margin_bottom = 80.0

[node name="MoveCounter" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 372.0
margin_top = 48.0
margin_right = 392.0
margin_bottom = 108.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="Control"]
anchor_left = 9.8
anchor_top = 15.0
anchor_right = 9.8
anchor_bottom = 15.0
margin_left = -96.0
margin_top = -40.0001
margin_right = 99.0
margin_bottom = 82.8799
custom_fonts/font = SubResource( 3 )
text = "Restart Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Direction" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 348.0
margin_top = 112.0
margin_right = 416.736
margin_bottom = 187.92
custom_fonts/font = SubResource( 4 )
text = "R"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndMessage" type="Label" parent="Control"]
anchor_left = 10.0
anchor_top = 11.8
anchor_right = 10.0
anchor_bottom = 11.8
margin_left = -174.944
margin_top = -55.644
margin_right = 174.944
margin_bottom = 135.644
custom_fonts/font = SubResource( 5 )
text = "RIP Bozo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="Control"]
margin_left = 576.0
margin_top = 64.0
margin_right = 801.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitRow" type="HBoxContainer" parent="Control/Settings"]
margin_left = 6.0
margin_right = 225.0
margin_bottom = 18.0
grow_horizontal = 0
rect_min_size = Vector2( 219, 0 )
size_flags_horizontal = 10
alignment = 2

[node name="ExitLabel" type="Label" parent="Control/Settings/ExitRow"]
margin_top = 2.0
margin_right = 175.0
margin_bottom = 16.0
grow_horizontal = 0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 2
size_flags_stretch_ratio = 3.0
text = "Exit"

[node name="XButton" type="Button" parent="Control/Settings/ExitRow"]
margin_left = 179.0
margin_right = 204.0
margin_bottom = 18.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 7 )
text = "X"

[node name="MuteButton" type="CheckButton" parent="Control/Settings"]
margin_top = 22.0
margin_right = 225.0
margin_bottom = 62.0
pressed = true
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeRow" type="HBoxContainer" parent="Control/Settings"]
margin_top = 66.0
margin_right = 225.0
margin_bottom = 82.0

[node name="VolumeLabel" type="Label" parent="Control/Settings/VolumeRow"]
margin_right = 90.0
margin_bottom = 16.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 9
size_flags_vertical = 1
text = "Volume: 50"
align = 1

[node name="VolumeSlider" type="HSlider" parent="Control/Settings/VolumeRow"]
margin_left = 94.0
margin_right = 214.0
margin_bottom = 16.0
grow_horizontal = 0
rect_min_size = Vector2( 120, 16 )
size_flags_horizontal = 8
size_flags_vertical = 1
value = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="Control"]
margin_left = 737.0
margin_right = 801.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 8
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Control/Settings/ExitRow/XButton" to="." method="_on_XButton_pressed"]
[connection signal="pressed" from="Control/Settings/MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="value_changed" from="Control/Settings/VolumeRow/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="Control/SettingsButton" to="." method="_on_TextureButton_pressed"]
